Add missing mysql components

--- a/saltstack/salt/nginx/files/php_host.conf
+++ b/saltstack/salt/nginx/files/php_host.conf
@@ -30,9 +30,11 @@ server {
 
         location ~ \.php$ {
                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-                include fastcgi.conf;
                 fastcgi_intercept_errors on;
                 fastcgi_pass php;
+                fastcgi_index  index.php;
+                fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+                include        fastcgi_params;
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
