Add backup_salt_master function

--- a/saltstack/salt/nginx/files/php_host.conf
+++ b/saltstack/salt/nginx/files/php_host.conf
@@ -3,6 +3,19 @@ upstream php {
         server {{ salt['pillar.get']('php:fpm:fpm_socket', '127.0.0.1:9000') }};
 }
 
+{% if salt['pillar.get']('nginx:website:redirect' %}
+server {
+        server_name {{ salt['pillar.get']('nginx:website:redirect' }}
+        return 301 $scheme://{{ salt['pillar.get']('nginx:website:server_name') }}$request_uri;
+}
+
+server {
+        server_name www.{{ salt['pillar.get']('nginx:website:redirect' }}
+        return 301 $scheme://{{ salt['pillar.get']('nginx:website:server_name') }}$request_uri;
+}
+{% endif %}
+
+
 server {
         ## Your website name goes here.
         server_name {{ salt['pillar.get']('nginx:website:server_name', '127.0.0.1:9000') }};
