--- a/saltstack/salt/nginx/pillar.example
+++ b/saltstack/salt/nginx/pillar.example
@@ -4,3 +4,4 @@ nginx:
     type: php
     server_name: www.archondronistics.com
     root_dir: /var/www/ad_wordpress
+    redirect: archondrones.com
