Add python website support

--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,3 +1,5 @@
+{% from 'config.sls' import parameters with context %}
+
 upstream python {
     server localhost:5000 fail_timeout=0;
   }
@@ -5,10 +7,10 @@ upstream python {
 
 server {
     listen       80;
-    server_name  {{ salt['pillar.get']('nginx:website:server_name', '127.0.0.1:9000') }};
+    server_name  {{ parameters['server_name'] }};
 
     location / {
-        root   /var/www/archon-frontend/dist;
+        root   {{ parameters['static_dir'] }};
         index  index.html index.htm;
 	    include /etc/nginx/mime.types;
     }
@@ -28,9 +30,9 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location /50x.html {
-        root   /var/www/archon-frontend/dist;
+        root   {{ parameters['static_dir'] }};
     }
 
-    auth_basic "Restricted";
-    auth_basic_user_file /etc/nginx/htpasswd;
+    #auth_basic "Restricted";
+    #auth_basic_user_file /etc/nginx/htpasswd;
 }
