--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,4 +1,4 @@
-{% from 'config.sls' import parameters with context %}
+{% from 'nginx/config.sls' import parameters with context %}
 
 upstream python {
     server localhost:5000 fail_timeout=0;
