--- a/saltstack/salt/supervisor/files/supervisord.conf
+++ b/saltstack/salt/supervisor/files/supervisord.conf
@@ -52,12 +52,12 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 {% for name, parameters in salt['pillar.get']('supervisor:program').iteritems() %}
 
 [program:{{ name }}]
-command=/env/bin/uwsgi --ini /app/conf/production/uwsgi.ini
-directory=/app/flythegap
-autostart=true
-autorestart=true
-user=www-data
-stopsignal=QUIT
+command={{ parameters['command'] }}
+directory={{ parameters['directory'] }}
+autostart={{ parameters['autostart'] }}
+autorestart={{ parameters['autorestart'] }}
+user={{ parameters['user'] }}
+stopsignal={{ parameters['stopsignal'] }}
 
 {% endfor %}
 
