--- a/saltstack/salt/nginx/pillar.example
+++ b/saltstack/salt/nginx/pillar.example
@@ -12,5 +12,5 @@ nginx:
       python_dir: /var/www/mypythonapp
       # Python location for nginx. In this case will be www.myflaskapp.com/api
       python_location: /api
-      # If you don't have a static folder, use the python_dir and set the location to root
+      # If you don't have a static folder, use the python_dir and set the location to /
       static_dir: /var/www/archon_frontend
