Fix YAML errors

--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,9 +1,12 @@
 {% from 'nginx/config.sls' import parameters with context %}
 
+{% if salt['pillar.get']('gunicorn') %}
+
 upstream python {
-    server localhost:5000 fail_timeout=0;
+    server {{ salt['pillar.get']('gunicorn:socket', 'localhost:5000') }};
   }
 
+{% endif %}
 
 server {
     listen       80;
@@ -16,12 +19,23 @@ server {
     }
 
     location /api/ {
+
+      {% if salt['pillar.get']('uwsgi') %}
+
+        uwsgi_pass unix://{{ salt['pillar.get']('uwsgi:uwsgi_conf:socket', 'localhost:5000') }};
+        proxy_set_header Host $http_host;
+        include uwsgi_params;
+
+      {% elif salt['pillar.get']('gunicorn') %}
+
         proxy_pass http://python;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
+
+      {% endif}
     }
 
     #error_page  404              /404.html;
@@ -36,3 +50,13 @@ server {
     #auth_basic "Restricted";
     #auth_basic_user_file /etc/nginx/htpasswd;
 }
+
+{% if parameters['redirect'] %}
+
+server {
+    listen 80;
+    server_name {{ parameters['redirect'] }};
+    return 301 $scheme://{{ parameters['server_name'] }}$request_uri;
+}
+
+{% endif %}
