--- a/saltstack/salt/postgresql/files/pg_hba.conf
+++ b/saltstack/salt/postgresql/files/pg_hba.conf
@@ -74,7 +74,7 @@
 
 # SALTSTACK
 # TYPE		DATABASE	USER		ADDRESS		METHOD
-{% for acl in salt['pillar.get']('postgres:acl') %}
+{% for acl in salt['pillar.get']('postgresql:acl') %}
     {% if acl[0] == 'local' %}
 {{ acl[0] }}	{{ acl[1] }}	{{ acl[2] }}	{{ acl[3] if acl|length > 3 else 'md5' }}
     {% else %}
