--- a/saltstack/salt/postgresql/pillar.example
+++ b/saltstack/salt/postgresql/pillar.example
@@ -2,17 +2,19 @@ postgresql:
   server:
     install: True
     postgis: True
+    # This will add the postgis and postgis_topology extensions to the selected db
+    postgis_db: ['db1', 'db2']
 
   database:
     db1:
       owner: 'localUser'
-      lc_ctype: 'C.UTF-8'
-      lc_collate: 'C.UTF-8'
+      lc_ctype: 'UTF-8'
+      lc_collate: 'UTF-8'
 
     db2:
       owner: 'remoteUser'
-      lc_ctype: 'C.UTF-8'
-      lc_collate: 'C.UTF-8'
+      lc_ctype: 'UTF-8'
+      lc_collate: 'UTF-8'
 
   # Manage roles
   user:
@@ -24,7 +26,3 @@ postgresql:
   acl:
     - ['local', 'db1', 'localUser']
     - ['host', 'db2', 'remoteUser', '123.123.0.0/24']
-
-  extension:
-    - postgis: [ db1, db2]
-    - postgis_topology: [db1, db2]
