--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,5 +1,3 @@
-{% from 'nginx/config.sls' import parameters with context %}
-
 {% if salt['pillar.get']('gunicorn') %}
 
 upstream python {
@@ -35,7 +33,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
 
-      {% endif}
+      {% endif %}
     }
 
     #error_page  404              /404.html;
@@ -51,7 +49,7 @@ server {
     #auth_basic_user_file /etc/nginx/htpasswd;
 }
 
-{% if parameters['redirect'] %}
+{% if 'redirect' in parameters %}
 
 server {
     listen 80;
