--- a/saltstack/salt/nginx/files/php_host.conf
+++ b/saltstack/salt/nginx/files/php_host.conf
@@ -3,24 +3,12 @@ upstream php {
         server {{ salt['pillar.get']('php:fpm:fpm_socket', '127.0.0.1:9000') }};
 }
 
-{% if salt['pillar.get']('nginx:website:redirect' %}
-server {
-        server_name {{ salt['pillar.get']('nginx:website:redirect' }}
-        return 301 $scheme://{{ salt['pillar.get']('nginx:website:server_name') }}$request_uri;
-}
-
-server {
-        server_name www.{{ salt['pillar.get']('nginx:website:redirect' }}
-        return 301 $scheme://{{ salt['pillar.get']('nginx:website:server_name') }}$request_uri;
-}
-{% endif %}
-
 
 server {
         ## Your website name goes here.
-        server_name {{ salt['pillar.get']('nginx:website:server_name', '127.0.0.1:9000') }};
+        server_name  {{ parameters['server_name'] }};
         ## Your only path reference.
-        root {{ salt['pillar.get']('nginx:website:root_dir', '/var/www') }};
+        root {{ parameters['root_dir'] }};
         ## This should be in your http block and if it is, it's not needed here.
         index index.php;
 
