--- a/saltstack/salt/miniconda/pillar.example
+++ b/saltstack/salt/miniconda/pillar.example
@@ -3,8 +3,6 @@ miniconda:
   virtualenv:
     # Name of the virtual environment
     myvirtualenv1:
-      # Directory to install the virtualenv. If you choose /env your final venv will be /env/myvirtualenv1
-      directory: /path/to/install/venv
       # Python version number supported by anaconda
       python: 2.7
       requirements: /path/to/requirements.txt
@@ -12,7 +10,7 @@ miniconda:
     myvirtualenv2:
       directory: /path/to/install/venv
       python: 2.7
-      # packages separated by a space
+      # Optional. Packages separated by a space
       packages: uwsgi gunicorn ...
     myvirtualenvN:
       directory: /path/to/install/venvN
