--- a/saltstack/salt/uwsgi/pillar.example
+++ b/saltstack/salt/uwsgi/pillar.example
@@ -3,7 +3,7 @@ uwsgi:
   install_lts: True
   # Path to the virtual environment, not to the bin folder in venv. If none we will use the system pip
   virtualenv: /path/to/venv
-  conf_dir: /path/to/uwsgi.ini
+  conf_file: /path/to/uwsgi.ini
   log_dir: /path/to/log/dir
   uwsgi_conf:
     chdir: /app/flythegap
