--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,7 +1,7 @@
 {% if salt['pillar.get']('gunicorn') %}
 
 upstream python {
-    server {{ salt['pillar.get']('gunicorn:socket', 'localhost:5000') }};
+    server {{ salt['pillar.get']('gunicorn:bind') }};
   }
 
 {% endif %}
