--- a/saltstack/salt/supervisor/files/supervisord.conf
+++ b/saltstack/salt/supervisor/files/supervisord.conf
@@ -49,16 +49,11 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;logfile_maxbytes=1MB        ; max # logfile bytes b4 rotation (default 50MB)
 ;logfile_backups=10          ; # of logfile backups (default 10)
 
-{% for name, parameters in salt['pillar.get']('supervisor:program').iteritems() %}
+{% for name, parameters in salt['pillar.get'](supervisor:program).iteritems() %}
 
 [program:{{ name }}]
-command={{ parameters['command'] }}
-directory={{ parameters['directory'] }}
-autostart={{ parameters['autostart'] }}
-autorestart={{ parameters['autorestart'] }}
-user={{ parameters['user'] }}
-stopsignal={{ parameters['stopsignal'] }}
+    {% for key, value in parameters.iteritems() %}
+{{ key }}={{ value }}
+    {% endfor %}
 
 {% endfor %}
-
-
