--- a/saltstack/salt/gunicorn/pillar.example
+++ b/saltstack/salt/gunicorn/pillar.example
@@ -11,5 +11,5 @@ gunicorn:
   worker_class: gevent
   user: nginx
   group: nginx
-  accesslog: access.log
-  errorlog: error.log
+  access_log: access.log
+  error_log: error.log
