--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -1,7 +1,7 @@
 {% if salt['pillar.get']('gunicorn') %}
 
 upstream python {
-    server {{ salt['pillar.get']('gunicorn:bind') }};
+    server {{ salt['pillar.get']('gunicorn:bind') }} fail_timeout=0;
   }
 
 {% endif %}
@@ -18,19 +18,17 @@ server {
 
     location /api/ {
       {% if salt['pillar.get']('uwsgi') %}
-        uwsgi_pass unix://{{ salt['pillar.get']('uwsgi:uwsgi_conf:socket', 'localhost:5000') }};
+        uwsgi_pass unix://{{ salt['pillar.get']('uwsgi:uwsgi_conf:socket') }};
         proxy_set_header Host $http_host;
         include uwsgi_params;
       {% elif salt['pillar.get']('gunicorn') %}
         proxy_pass http://python;
 
         proxy_redirect     off;
-        proxy_buffering    off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
-        proxy_set_header   X-Forwarded-Proto $scheme;
       {% endif %}
     }
 
