--- a/saltstack/salt/postgresql/pillar.example
+++ b/saltstack/salt/postgresql/pillar.example
@@ -25,7 +25,7 @@ postgresql:
 
   acl:
     - ['local', 'db1', 'localUser']
-    - ['host', 'db2', 'remoteUser', '123.123.0.0/24']
+    - ['host', 'db2', 'remoteUser', '123.123.0.0/24', 'md5']
 
   restore:
     db_to_restore1:
