--- a/saltstack/salt/nginx/files/php_host.conf
+++ b/saltstack/salt/nginx/files/php_host.conf
@@ -42,4 +42,10 @@ server {
                 expires max;
                 log_not_found off;
         }
+
+        {% if 'htaccess' in parameters %}
+        auth_basic "Restricted";
+        auth_basic_user_file {{ parameters['htaccess']['file'] }};
+        {% endif %}
+
 }
