--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -41,8 +41,10 @@ server {
         root   {{ parameters['static_dir'] }};
     }
 
-    #auth_basic "Restricted";
-    #auth_basic_user_file /etc/nginx/htpasswd;
+    {% if 'htaccess' in parameters %}
+    auth_basic "Restricted";
+    auth_basic_user_file {{ parameters['htaccess']['file'] }};
+    {% endif %}
 }
 
 {% if 'redirect' in parameters %}
