--- a/saltstack/salt/postgresql/files/postgresql.conf
+++ b/saltstack/salt/postgresql/files/postgresql.conf
@@ -594,6 +594,6 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 # Automated generated from SaltStack
 
-{% for key, value in salt['pillar.get']('postgresql:conf') %}
+{% for key, value in salt['pillar.get']('postgresql:conf').iteritems() %}
 {{ key }} = {{ value }}
 {% endfor %}
