--- a/saltstack/salt/postgresql/files/postgresql.conf
+++ b/saltstack/salt/postgresql/files/postgresql.conf
@@ -55,7 +55,7 @@
 #------------------------------------------------------------------------------
 
 # - Connection Settings -
-#listen_address = '*'
+
 #listen_addresses = 'localhost'		# what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
@@ -595,5 +595,5 @@ default_text_search_config = 'pg_catalog.english'
 # Automated generated from SaltStack
 
 {% for key, value in salt['pillar.get']('postgresql:conf').iteritems() %}
-{{ key }} = {{ value }}
+{{ key }} = '{{ value }}'
 {% endfor %}
