Add debian support

--- a/saltstack/salt/postgresql/files/pg_hba-Debian.conf
+++ b/saltstack/salt/postgresql/files/pg_hba-Debian.conf
@@ -73,6 +73,16 @@
 # configuration parameter, or via the -i or -h command line switches.
 
 
+# SALTSTACK
+# TYPE		DATABASE	USER		ADDRESS		METHOD
+{% for acl in salt['pillar.get']('postgresql:acl') %}
+    {% if acl[0] == 'local' %}
+{{ acl[0] }}	{{ acl[1] }}	{{ acl[2] }}	{{ acl[3] if acl|length > 3 else 'md5' }}
+    {% else %}
+{{ acl[0] }}	{{ acl[1] }}	{{ acl[2] }}	{{ acl[3] }}	{{ acl[4] if acl|length > 4 else 'md5' }}
+    {% endif %}
+{% endfor %}
+# /SALTSTACK
 
 
 # DO NOT DISABLE!
