Add debian support

--- a/saltstack/salt/postgresql/files/postgresql-Debian.conf
+++ b/saltstack/salt/postgresql/files/postgresql-Debian.conf
@@ -594,3 +594,12 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+#------------------------------------------------------------------------------
+# SALSTACK OPTIONS
+#------------------------------------------------------------------------------
+# Automated generated from SaltStack
+
+{% for key, value in salt['pillar.get']('postgresql:conf').iteritems() %}
+{{ key }} = '{{ value }}'
+{% endfor %}
