--- a/saltstack/salt/postgresql/files/postgresql-Debian.conf
+++ b/saltstack/salt/postgresql/files/postgresql-Debian.conf
@@ -599,7 +599,8 @@ default_text_search_config = 'pg_catalog.english'
 # SALSTACK OPTIONS
 #------------------------------------------------------------------------------
 # Automated generated from SaltStack
-
-{% for key, value in salt['pillar.get']('postgresql:conf').iteritems() %}
+{% if 'conf' in salt['pillar.get']('postgresql') %}
+	{% for key, value in salt['pillar.get']('postgresql:conf').iteritems() %}
 {{ key }} = '{{ value }}'
-{% endfor %}
+	{% endfor %}
+{% endif %}
