--- a/saltstack/salt/nginx/files/python_host.conf
+++ b/saltstack/salt/nginx/files/python_host.conf
@@ -41,7 +41,7 @@ server {
         root   {{ parameters['static_dir'] }};
     }
 
-    {% if 'htaccess' in parameters %}
+    {% if parameters['htaccess']['enable'] %}
     auth_basic "Restricted";
     auth_basic_user_file {{ parameters['htaccess']['file'] }};
     {% endif %}
