--- a/saltstack/salt/apache/pillar.example
+++ b/saltstack/salt/apache/pillar.example
@@ -4,5 +4,4 @@ apache:
       type: ssl
       server_admin: jon@example.com
       document_root: /var/www
-      ssl_certificate_file: /etc/ssl/certs/mailserver.pem
-      ssl_certificate_key_file: /etc/ssl/private/mailserver.pem
+      ssl_certificate_directory: /etc/ssl/certs/
