Add amazon security suggestions

--- a/saltstack/salt/postfix/pillar.example
+++ b/saltstack/salt/postfix/pillar.example
@@ -1,6 +1,7 @@
 postfix:
   vmail_user: vmail
   vmail_group: vmail
+  ssl_dir: /etc/ssl/archon_mta
   db:
     user: mailuser
     password: gfdc8998dsf89
