--- a/saltstack/salt/dovecot/files/10-ssl.conf
+++ b/saltstack/salt/dovecot/files/10-ssl.conf
@@ -9,8 +9,8 @@
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
-ssl_cert = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['grains.get']('id') }}.crt
-ssl_key = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['grains.get']('id') }}.key
+ssl_cert = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['pillar.get']('dovecot:fqdn') }}.crt
+ssl_key = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['pillar.get']('dovecot:fqdn') }}.key
 
 # If key file is password protected, give the password here. Alternatively
 # give it when starting dovecot with -p parameter. Since this file is often
