--- a/saltstack/salt/dkim/files/opendkim.conf
+++ b/saltstack/salt/dkim/files/opendkim.conf
@@ -55,6 +55,6 @@ UserID                  opendkim:opendkim
 
 {% if 'tcp' in salt['pillar.get']('dkim:socket:type') %}
 Socket              inet:{{ salt['pillar.get']('dkim:socket:port') }}@{{ salt['pillar.get']('dkim:socket:host') }}
-{% elif 'unix' in salt['pillar.get']('dkim:socket:type')
+{% elif 'unix' in salt['pillar.get']('dkim:socket:type') %}
 Socket              local:{{ salt['pillar.get']('dkim:socket:file') }}
 {% endif %}
