--- a/saltstack/salt/dovecot/files/10-master.conf
+++ b/saltstack/salt/dovecot/files/10-master.conf
@@ -92,6 +92,12 @@ service auth {
     #group = 
   }
 
+  unix_listener auth-master {
+    mode = 0660
+    user = vmail
+    group = vmail
+  }
+
  # Postfix smtp-auth
   unix_listener /var/spool/postfix/private/auth {
     mode = 0660
