--- a/saltstack/salt/cluebringer/files/cluebringer.conf
+++ b/saltstack/salt/cluebringer/files/cluebringer.conf
@@ -26,7 +26,7 @@ user={{ cluebringer.lookup.user }}
 group={{ cluebringer.lookup.group }}
 
 # Filename to store pid of parent process
-#pid_file=/var/run/cluebringer/cbpolicyd.pid
+#pid_file=/tmp/cluebringer/cbpolicyd.pid
 
 # Uncommenting the below option will prevent cbpolicyd going into the background
 #background=no
@@ -59,7 +59,7 @@ group={{ cluebringer.lookup.group }}
 # 2 - Notices, warnings, errors
 # 3 - Info, notices, warnings, errors
 # 4 - Debugging 
-log_level=0
+log_level=4
 
 # File to log to instead of stdout
 log_file=/var/log/cbpolicyd.log
@@ -123,7 +123,7 @@ port=10031
 
 [database]
 #DSN=DBI:SQLite:dbname=policyd.sqlite
-#DSN=DBI:mysql:database=policyd;host=localhost
+DSN=DBI:mysql:database={{ salt['pillar.get']('cluebringer:db:database') }};host={{ salt['pillar.get']('cluebringer:db:host') }}
 #DSN=DBI:Pg:database=policyd;host=localhost
 #DSN=DBI:_DBC_DBTYPE_:dbname=_DBC_DBNAME_;host=_DBC_DBSERVER_
 ## Debian
