--- a/saltstack/salt/postfix/pillar.example
+++ b/saltstack/salt/postfix/pillar.example
@@ -3,6 +3,7 @@ postfix:
   vmail_group: vmail
   ssl_dir: /etc/ssl/archon_mta
   fqdn: mail.example.com
+  public_ip: 123.456.789.123
   db:
     user: mailuser
     password: gfdc8998dsf89
